--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,9 +1,9 @@
 - id: blogTitle
-  translation: Latest Post
+  translation: Kubecons
 - id: readMore
   translation: Read more
 - id: viewAllPost
-  translation: View All Post
+  translation: View All Kubecons
 - id: share
   translation: Share
 - id: aboutAuthor
